--- a/index.html
+++ b/index.html
@@ -170,7 +170,7 @@
     <div class="container">
         <header>
             <h1>DSA & LLD Prep</h1>
-            <p class="subtitle">Complete Striver A2Z Sheet (455+ Problems) + LLD Topics</p>
+            <p class="subtitle">Complete tracker with (455+ Problems) + LLD Topics</p>
         </header>
         <div class="stats-container">
             <div class="stat-card">
